ui: fix home icon alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -115,3 +115,7 @@ html[data-theme='dark'] {
     visibility: hidden;
   }
 }
+
+.breadcrumbHomeIcon_YNFT {
+  display: inline-block;
+}
